# modellm

./: .gitignore  CHANGELOG_BASEMODELAI.md  LICENSE  README.md  __init__.py  add_llm.py  example.py  pyproject.toml  requirements.txt  setup.py
examples/: recipes.py  recipes_with_basemodelai.py  stories.py
modellm/: __init__.py  __init__.pyi  modellm.py
