[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modellm"
version = "0.1.0"
description = "A minimalist LLM modeling library"
readme = "README.md"
authors = [
    {name = "Eduard Knezovic", email = "knezovic.eduard@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/eduardknezovic/modellm"

[tool.setuptools]
packages = ["modellm"]
